--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <div class="outer">
+  <main class="outer">
     <img src="assets\images\image-omelette.jpeg" alt="">
     <h1>Simple Omelette Recipe</h1>
     <p>
@@ -120,9 +120,9 @@
       </tr>
     </table>
   
-</div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Naman Garg</a>.
   </div>
